year4/System-on-a-chip/vivado_hls.log
INFO: [HLS 200-10] Running '/tools/Xilinx/Vivado/2019.1/bin/unwrapped/lnx64.o/vivado_hls'
INFO: [HLS 200-10] For user 'leonid' on host 'leonid-lenovo' (Linux_x86_64 version 6.2.0-33-generic) on Wed Oct 04 11:59:48 MSK 2023
INFO: [HLS 200-10] On os Ubuntu 22.04.3 LTS
INFO: [HLS 200-10] In directory '/home/leonid/Desktop/university/year4/System-on-a-chip'
Sourcing Tcl script '/home/leonid/Desktop/university/year4/System-on-a-chip/lab2/solution1/csynth.tcl'
INFO: [HLS 200-10] Opening project '/home/leonid/Desktop/university/year4/System-on-a-chip/lab2'.
INFO: [HLS 200-10] Adding design file 'lab2/.apc/main.c' to the project
INFO: [HLS 200-10] Opening solution '/home/leonid/Desktop/university/year4/System-on-a-chip/lab2/solution1'.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7a100t-csg324-1'
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'lab2/.apc/main.c' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from lab2/.apc/main.c:1:
lab2/.apc/main.c:18:22: error: use of undeclared identifier 'n'
 for (int i = 0; i < n; i++){
                     ^
lab2/.apc/main.c:19:23: error: use of undeclared identifier 'n'
  for (int j = 0; j < n ; j++){
                      ^
lab2/.apc/main.c:28:22: error: use of undeclared identifier 'n'
 for (int i = 0; i < n; i++){
                     ^
lab2/.apc/main.c:35:21: error: use of undeclared identifier 'n'
 for(int i = 0; i < n; i++)
                    ^
lab2/.apc/main.c:52:10: error: use of undeclared identifier 'n'
 int j = n - 2;
         ^
lab2/.apc/main.c:56:10: error: use of undeclared identifier 'n'
 int k = n - 1;
         ^
lab2/.apc/main.c:59:21: error: use of undeclared identifier 'n'
 int l = j + 1, r = n - 1;
                    ^
lab2/.apc/main.c:71:22: error: use of undeclared identifier 'n'
 for (int i = 0; i < n; i++) {
                     ^
lab2/.apc/main.c:72:27: error: use of undeclared identifier 'n'
  for (int j = i + 1; j < n; j++) {
                          ^
lab2/.apc/main.c:86:21: error: use of undeclared identifier 'n'
 for(int i = 0; i < n; i++) {
                    ^
10 errors generated.
Failed during preprocessing.
    while executing
"source /home/leonid/Desktop/university/year4/System-on-a-chip/lab2/solution1/csynth.tcl"
    invoked from within
"hls::main /home/leonid/Desktop/university/year4/System-on-a-chip/lab2/solution1/csynth.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel 1 hls::main {*}$args"
    (procedure "hls_proc" line 5)
    invoked from within
"hls_proc $argv"
